--- a/dispatch/docker-compose.yaml
+++ b/dispatch/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   rabbitmq:
-    image: rabbitmq:3.7-management-alpine
+    image: rabbitmq:3.8-management-alpine
     ports:
       - "5672"
       - "15672:15672"
@@ -10,7 +10,7 @@ services:
   payment:
     build:
       context: ../payment
-    image: steveww/rs-payment
+    image: robotshop/rs-payment:2.1.1
     depends_on:
       - rabbitmq
     ports:
@@ -20,7 +20,7 @@ services:
   dispatch:
     build:
       context: .
-    image: steveww/rs-dispatch
+    image: robotshop/rs-dispatch:2.1.1
     depends_on:
       - rabbitmq
     networks:
