--- a/payment/Dockerfile
+++ b/payment/Dockerfile
@@ -1,15 +1,18 @@
-FROM python:3.9
+FROM python:3.9.16-alpine
 
 EXPOSE 8080
 USER root
 
-ENV INSTANA_SERVICE_NAME=payment
+# ENV INSTANA_SERVICE_NAME=payment
 
 WORKDIR /app
 
 COPY requirements.txt /app/
 
-RUN pip install -r requirements.txt
+RUN apk add --no-cache pcre curl && \
+    apk add --no-cache --virtual .build-deps gcc libc-dev linux-headers pcre-dev && \
+    pip install --no-cache-dir -r requirements.txt && \
+    apk del --no-network .build-deps
 
 COPY *.py /app/
 COPY payment.ini /app/
