--- a/ratings/Dockerfile
+++ b/ratings/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -yqq unzip libzip-dev \
     && docker-php-ext-install pdo_mysql opcache zip
 
 # Enable AutoProfile for PHP which is currently opt-in beta
-RUN echo "instana.enable_auto_profile=1" > "/usr/local/etc/php/conf.d/zzz-instana-extras.ini"
+# RUN echo "instana.enable_auto_profile=1" > "/usr/local/etc/php/conf.d/zzz-instana-extras.ini"
 
 # relax permissions on status
 COPY status.conf /etc/apache2/mods-available/status.conf
