--- a/shipping/Dockerfile
+++ b/shipping/Dockerfile
@@ -1,10 +1,4 @@
-#
-# Build
-#
-FROM debian:10 AS build
-
-RUN apt-get update && apt-get -y install maven
-
+FROM maven:3.9.0-eclipse-temurin-8-alpine AS build
 WORKDIR /opt/shipping
 
 COPY pom.xml /opt/shipping/
@@ -12,10 +6,10 @@ RUN mvn dependency:resolve
 COPY src /opt/shipping/src/
 RUN mvn package
 
-#
-# Run
-#
-FROM openjdk:8-jdk
+
+FROM eclipse-temurin:8-jdk-alpine
+
+RUN apk add --no-cache curl
 
 EXPOSE 8080
 
@@ -27,4 +21,3 @@ ENV DB_HOST=mysql
 COPY --from=build /opt/shipping/target/shipping-1.0.jar shipping.jar
 
 CMD [ "java", "-Xmn256m", "-Xmx768m", "-jar", "shipping.jar" ]
-
