--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,4 +1,10 @@
+---
 name: Build images on push
+
+concurrency:
+  group: container-release
+  cancel-in-progress: false
+
 on:
   push:
     branches:
