--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -33,12 +33,14 @@ jobs:
         shell: bash
         run: |
           if [ "${{ inputs.app }}" = "ALL" ]; then
-            echo "changes=`echo 'mongo catalogue user cart mysql shipping ratings payment dispatch web' | jq -R -s -c 'split(" ")[:-1]'`" >> $GITHUB_OUTPUT
+            output=$(echo "mongo catalogue user cart mysql shipping ratings payment dispatch web" | jq -Rc 'split(" ")')
+            echo "changes=$output" >> $GITHUB_OUTPUT
           else
             output="[]"
-            output="$(echo ${{ inputs.app }} | jq -R -s -c 'split(" ")[:-1]')"
+            output="$(echo ${{ inputs.app }} | jq -Rc 'split(" ")'
             echo "changes=${output}" >> $GITHUB_OUTPUT
           fi
+          echo $output
   images-build:
     uses: VoliKoN/robot-shop/.github/workflows/build-images.yml@master
     if: needs.generate-build-matrix.outputs.matrix != '[]'
