--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -63,7 +63,7 @@ jobs:
             echo "second_image=$simage" >> $GITHUB_OUTPUT
           else
             image=${{ matrix.image }}
-            dockerfile=Dockerfile
+            dockerfile=${{ matrix.image }}/Dockerfile
             echo "second_dockerfile=" >> $GITHUB_OUTPUT
             echo "second_image=" >> $GITHUB_OUTPUT
           fi
