--- a/web-proxy/default.conf.template
+++ b/web-proxy/default.conf.template
@@ -1,7 +1,3 @@
-# Instana tracing
-# opentracing_load_tracer /usr/local/lib/libinstana_sensor.so /etc/instana-config.json;
-# opentracing_propagate_context;
-
 server {
     listen       8080;
     server_name  localhost;
@@ -13,17 +9,17 @@ server {
     #error_log /dev/stdout debug;
     #rewrite_log on;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        ssi    on;
-    }
+    # location / {
+    #     root   /usr/share/nginx/html;
+    #     index  index.html index.htm;
+    #     ssi    on;
+    # }
 
-    location /images/ {
-        expires 5s;
-        root   /usr/share/nginx/html;
-        try_files $uri /images/placeholder.png;
-    }
+    # location /images/ {
+    #     expires 5s;
+    #     root   /usr/share/nginx/html;
+    #     try_files $uri /images/placeholder.png;
+    # }
 
     #error_page  404              /404.html;
 
@@ -81,8 +77,12 @@ server {
         proxy_pass http://${RATINGS_HOST}:80/;
     }
 
-    location /nginx_status {
-        stub_status on;
-        access_log off;
+    location / {
+        proxy_pass http://${WEB_HOST}:8080/;
     }
+
+    # location /nginx_status {
+    #     stub_status on;
+    #     access_log off;
+    # }
 }
