--- a/charts/robot-shop/values.yaml
+++ b/charts/robot-shop/values.yaml
@@ -1,10 +1,7 @@
-# Default values for robot-shop.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 ingress:
   enabled: true
   className: ""
+  # -- ingress `rewrite-target` is needed
   annotations: 
     nginx.ingress.kubernetes.io/rewrite-target: /$2
   host: rs.example.com
