--- a/.github/workflows/charts-release.yml
+++ b/.github/workflows/charts-release.yml
@@ -10,6 +10,10 @@ on:
     paths:
       - "charts/**"
 
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   release-charts:
     name: Release charts
