--- a/charts/robot-shop/Chart.yaml
+++ b/charts/robot-shop/Chart.yaml
@@ -6,8 +6,8 @@ sources:
   - https://github.com/VoliKoN/robot-shop
 type: application
 
-version: 0.1.4
-appVersion: "0.3"
+version: 0.1.5
+appVersion: "0.5"
 icon: https://github.com/VoliKoN/robot-shop/raw/master/web/static/media/stan.png
 
 maintainers:
@@ -15,22 +15,18 @@ maintainers:
     url: https://nevoef.com
 
 dependencies:
-  - alias: mongodb
-    name: rs-stateful
-    version: "0.1.1"
-    repository: https://nevoef.com/robot-shop
-  - alias: redis
-    name: rs-stateful
-    version: "0.1.1"
-    repository: https://nevoef.com/robot-shop
-  - alias: mysql
-    name: rs-stateful
-    version: "0.1.1"
-    repository: https://nevoef.com/robot-shop
-  - alias: rabbitmq
-    name: rs-stateful
-    version: "0.1.1"
-    repository: https://nevoef.com/robot-shop
+  - name: mongodb
+    version: 13.9.0
+    repository: https://charts.bitnami.com/bitnami
+  - name: redis
+    version: 17.8.4
+    repository: https://charts.bitnami.com/bitnami
+  - name: mysql
+    version: 9.6.0
+    repository: https://charts.bitnami.com/bitnami
+  - name: rabbitmq
+    version: 11.10.3
+    repository: https://charts.bitnami.com/bitnami
   - alias: web
     name: rs-app
     version: "0.1.1"
